welcome.lessons.welcome.bdr.BDR.scala.code
if (estSurMessage():Boolean){
	litMessage():String
	else {
		avance()
	}
}
